--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/yolo-model:latest .
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/yolo-model:latest .
 
       - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository_owner }}/yolo-model:latest
+        run: docker push ghcr.io/${{ github.repository_owner }}/yolo-model:latest
